[Left Sidebar] Add space to bottom of left sidebar for avoiding to be hidden by horizontal scroll bar.

--- a/_sass/custom/_mysidebar.scss
+++ b/_sass/custom/_mysidebar.scss
@@ -82,6 +82,7 @@
         //      but, top coordinate was occupied by topbar.
         position: sticky;  // change 'sticky' to 'fixed'.
         opacity: 1;  // Remove row opacity animation After/Before hovering
+        padding-bottom: 1em;
 
         &::-webkit-scrollbar {
             width: 4px;
